@@ -264,7 +264,7 @@ use IO ();	# Load the XS module
 require Exporter;
 @ISA = qw(Exporter);
 
-$VERSION = "1.24";
+$VERSION = "1.25";
 $VERSION = eval $VERSION;
 
 @EXPORT_OK = qw(
